--- a/midterm_project/form.html
+++ b/midterm_project/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Prediction Form</title>
+    <title>Loan Default Probability Prediction Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <div class="form-container">
-            <h2 class="text-center mb-4">Loan Deaful Probability Prediction</h2>
+            <h2 class="text-center mb-4">Loan Default Probability Prediction</h2>
             <form id="predictionForm">
                 <div class="row">
                     <div class="col-md-6 mb-3">
